--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       </div>
       
       <header>
-      <a href="/"><img src="img/LUL.jpg"></a>
+      <a href="/"><img src="img/LUL.jpg", width="70px", height="70px"></a>
       <p>Sergey Shestak<br><span>Student</span></p>
     </header>
 
