--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
 
   <body>    
        <header>
-      <a href="/"><img src="123123/profilepic.jpg"></a>
+      <a href="/"><img src="123123/image/profilepic.jpg"></a>
       <p>Cameron Pittman<br><span>Course Developer</span></p>
     </header>
 
    <header>
-      <a href="/"><img src="123123/LUL.jpg", width="70px", height="70px"></a>
+      <a href="/"><img src="123123/image/LUL.jpg", width="70px", height="70px"></a>
       <p>Sergey Shestak<br><span>Student</span></p>
     </header>
 
@@ -67,7 +67,7 @@
           </li>
 
           <li>
-            <img style="width: 100px;" src="123123/pizzeria.jpg">
+            <img style="width: 100px;" src="123123/image/pizzeria.jpg">
             <a href="views/pizza.html">Cam's Pizzeria</a>
             <p>Who wants a performant pizza?</p>
           </li>
