--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ footer span { float: right; font-style: italic; }
   <body>    
    <header>
       <a href="/"><img src="123123/image/LUL.jpg", width="70px", height="70px"></a>
-      <p>Sergey Shestak<br><span>Student</span></p>
+     <strong> I love programming so mych! </strong> I wrote my first code in the 6th grade. Since then, programming has taken up a big  part of my life.<p>Sergey Shestak<br><span>Student</span></p>
     </header>
 
     <div class="container">
